# alcove-dux

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  RELEASE_CHECKLIST.md  SECURITY.md  docker-compose.hosted.yml  docker-compose.yml  pyproject.toml  roadmap.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  pages.yml  release.yml  scorecard.yml  secrets.yml  semgrep.yml
config/: catalog.yaml
docs/: alcove-plugin.md  benchmarks.md  cli.md  configuration.md  datasets.md  demo-video.md  demo.md  deployment.md  hosted-hardening.md  multilingual.md  privacy.md  quickstart.md  reports.md  repository-setup.md  research.md  vector-stores.md
examples/: source.txt  submitted.txt
examples/corpus/: source-a.txt  source-b.md
examples/demo/: source.txt  submitted.txt
examples/reports/: example-review.html  example-scan.alcove-dux  example-scan.html
schemas/: alcove-dux-report.schema.json
scripts/: calibrate_threshold.py  demo.py  live_fire.py  pan14_smoke.py  pes2o_chroma_batch.py  run_local_benchmark.py  threshold_sweep.py
site/: index.html
src/alcove_dux/: __init__.py  api.py  calibration.py  candidates.py  catalog.json  catalog.py  cli.py  config.py  corpus.py  documents.py  evaluation.py  html_report.py  matching.py  reports.py  semantic.py  storage.py  vector_store.py
src/alcove_dux/datasets/: pairs.py  pan.py
src/alcove_dux/integrations/: __init__.py  alcove.py
tests/: test_alcove_integration.py  test_api.py  test_calibration.py  test_candidates.py  test_catalog.py  test_cli.py  test_config.py  test_corpus.py  test_documents.py  test_evaluation.py  test_html_report.py  test_matching.py  test_pair_datasets.py  test_pan_dataset.py  test_pes2o_chroma_batch.py  test_release_metadata.py  test_reports.py  test_semantic.py  test_storage.py  test_vector_store.py
