[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "alcove-dux"
version = "0.1.0"
description = "Local-first plagiarism and text-reuse evidence toolkit"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "Spitfire Cowboy" }
]
keywords = [
  "plagiarism",
  "text-reuse",
  "semantic-similarity",
  "document-analysis",
  "local-first"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing :: Linguistic"
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "twine>=5.0"
]
semantic = [
  "sentence-transformers>=3.0",
  "faiss-cpu>=1.8"
]
vector-chroma = [
  "chromadb>=0.5"
]
vector-zvec = [
  "zvec>=0.2"
]
documents = [
  "pypdf>=4.0",
  "python-docx>=1.1"
]
yaml = [
  "PyYAML>=6.0"
]
eval = [
  "datasets>=3.0"
]
api = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30"
]
alcove = [
  "alcove-search>=0.3"
]
all = [
  "alcove-dux[semantic,vector-chroma,documents,yaml,eval,api,alcove]"
]

[project.scripts]
alcove-dux = "alcove_dux.cli:main"

[project.entry-points."alcove.extractors"]
alcove_dux = "alcove_dux.integrations.alcove:extract_alcove_dux_report"

[tool.hatch.build.targets.wheel]
packages = ["src/alcove_dux"]

[tool.hatch.build.targets.wheel.force-include]
"src/alcove_dux/catalog.json" = "alcove_dux/catalog.json"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=alcove_dux --cov-report=term-missing --cov-report=xml"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
